Avoid `display: inline-block` for header content areas.
`display: inline-block` is sensitive to whitespace, so if there are characters in between two divs
that will be output when they are rendered.

This means when columns are exactly 33.3% and 66.6% to sit alongside each other,
the whitespace that is output misaligns the columns forcing them onto a new line.

Using floats is similar to how our grid system works, but requires a clearfix on the parent container,
so that the component does not collapse.

--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -34,6 +34,7 @@
   }
 
   .govuk-header__container {
+    @include govuk-clearfix;
     position: relative;
     margin-bottom: -$govuk-header-border-width;
     padding-top: govuk-spacing(2);
@@ -122,17 +123,17 @@
     padding-right: govuk-spacing(8);
 
     @include mq ($from: desktop) {
-      display: inline-block;
       width: 33.33%;
       padding-right: 0;
+      float: left;
       vertical-align: top;
     }
   }
 
   .govuk-header__content {
     @include mq ($from: desktop) {
-      display: inline-block;
       width: 66.66%;
+      float: left;
     }
   }
 
